# Econometrics-B

./: README.md  pyproject.toml  week2_OLS_basics.ipynb  week3_OLS_properties.ipynb  week4_OLS_MC_simulation.ipynb  week6_Ztest_power_function.ipynb  week7_Ttest.ipynb
